# album-list

./: .gitignore  Makefile  README.md
.github/workflows/: data.yaml
cleaner/: pyproject.toml
cleaner/cleaner/: main.py
cover/: pyproject.toml
cover/cover/: main.py
data/: albumy.org
page/: package-lock.json
page/src/layouts/: Layout.astro
page/src/pages/: changelog.astro  index.astro
parser/: pyproject.toml
parser/album_list_parser/: main.py
