[tool.poetry]
name = "album-list-parser"
version = "0.1.0"
description = ""
authors = ["xpakx <55586470+xpakx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
orgparse = "^0.4.20231004"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
